Make player setup consistent

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -21,10 +21,10 @@ This scenario is played over 12 rounds.
 \textbf{Player Count:} 2
 
 \textbf{Starting Resources:}\par
-{\centering\hfill \textbf{10 ×} \svg{gold} \hfill \textbf{2 ×} \svg{building_materials} \hfill \textbf{1 ×} \svg{valuables}\hfill}
+\resources{10}{2}{1}
 
 \textbf{Starting Income:}\par
-{\centering\hfill\textbf{``10''} \svg{gold} \hfill \textbf{``2''} \svg{building_materials} \hfill \textbf{``1''} \svg{valuables}\hfill}
+\resources{10}{2}{1}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -34,9 +34,9 @@ This scenario is played over 12 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
-\textbf{Map Tile Pool:} Each player takes 1 random Near Map Tile (IV-V) and 1 random Far Map Tile (II-III).
+\textbf{Map Tile Pool:} Each player takes 1 random Near Map (IV-V) Tile and 1 random Far (II-III) Map Tile .
 
-\textbf{Bonus:} Search (2) the Artifact Deck
+\textbf{Starting Bonus:} Search (2) the Artifact Deck
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -55,14 +55,6 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
   \item All Near Map tiles must have Obelisks.
 \end{itemize}
 
-\subsection*{\MakeUppercase{Additional rules}}
-
-\begin{itemize}
-  \item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.
-  \item The hero who defeats an enemy army gains 2 \svg{experience}.
-    The winning player rolls two Treasure Dice and resolves one of them.
-\end{itemize}
-
 \subsection*{\MakeUppercase{Victory Conditions}}
 
 Defeat all invading armies.
@@ -72,6 +64,16 @@ Defeat all invading armies.
 There is an undefeated enemy army left at the end of Round 12.
 
 One of your towns is captured or a main hero is defeated in battle (retreat doesn't count).
+
+\subsection*{\MakeUppercase{Additional Rules}}
+
+\begin{itemize}
+  \item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.
+  \item The hero who defeats an enemy army gains 2 \svg{experience}.
+    The winning player rolls two Treasure Dice and resolves one of them.
+\end{itemize}
+
+\columnbreak
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -102,7 +104,7 @@ One of your towns is captured or a main hero is defeated in battle (retreat does
   \item Enemy armies have 3 Movement Points per round.
   \item Enemy armies move as described in the rulebook (p. 33), but instead of capturing, they destroy everything in their way.
     Place black cubes on any field they pass and treat them as empty from that point.
-  \item If an enemy's movement could go two different ways, the players decide which way to go.
+  \item If an enemy's movement could go different ways, the players decide which way to go.
 \end{itemize}
 
 
