--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -18,10 +18,10 @@ This scenario is played over ... rounds.
 \textbf{Player count:} ...
 
 \textbf{Starting Resources:}\par
-{\centering\hfill \textbf{X ×} \svg{gold} \hfill \textbf{Y ×} \svg{building_materials} \hfill \textbf{Z ×} \svg{valuables}\hfill}
+\resources{<gold>}{<building_materials>}{<valuables>}
 
 \textbf{Starting Income:}\par
-{\centering\hfill\textbf{``X''} \svg{gold} \hfill \textbf{``Y''} \svg{building_materials} \hfill \textbf{``Z''} \svg{valuables}\hfill}
+\resources{<gold>}{<building_materials>}{<valuables>}
 
 \textbf{Starting Units:}
 \begin{itemize}
