--- a/metadata.tex
+++ b/metadata.tex
@@ -103,6 +103,22 @@
   {\includesvg[height=#1px]{\svgs/\detokenize{#2}.svg}}%
 }%
 
+\newcommand{\resources}[3]{%
+  \bgroup%
+  \def\arraystretch{2}%
+  \begin{tabularx}{\linewidth} {%
+    | >{\centering\arraybackslash}X%
+    | >{\centering\arraybackslash}X%
+    | >{\centering\arraybackslash}X | }%
+   \hline%
+   #1 \raisebox{-.2\height}{\svg[15]{gold}} &
+   #2 \raisebox{-.2\height}{\svg[15]{building_materials}} &
+   #3 \raisebox{-.2\height}{\svg[15]{valuables}} \\%
+   \hline%
+  \end{tabularx}%
+  \egroup%
+}%
+
 \renewcommand{\labelitemi}{
   \begin{tikzpicture}
     \node (listdot) [circle, blur shadow={fill=camel, shadow yshift=0pt, shadow xshift=0pt, shadow blur radius=1.2pt, shadow blur steps=10}, inner sep=-1.5] {\includegraphics[width=0.7em, valign=c]{\layout/listdot.png}};
