Fix map setup template

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -10,7 +10,7 @@
 \textit{A Lady clad in dark robes visits you in your dreams, offering you a golden chalice full of blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This scenario plays out over 13 rounds.
+This scenario is played over 13 rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 4
