--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -34,7 +34,7 @@ This scenario is played over 12 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
-\textbf{Map Tile Pool:} Each player takes 1 random Near Map (IV-V) Tile and 1 random Far (II-III) Map Tile .
+\textbf{Map Tile Pool:} Each player takes 1 random Near (IV-V) Map Tile and 1 random Far (II-III) Map Tile.
 
 \textbf{Starting Bonus:} Search (2) the Artifact Deck
 
@@ -42,15 +42,15 @@ This scenario is played over 12 rounds.
 
 Take the following Map Tiles and set them up as shown in the scenario map layout:
 
-\textbf{2 × Starting Map Tile (I)}
+\textbf{2 × Starting (I) Map Tile}
 \begin{itemize}
   \item Starting Tiles of your chosen factions.
   \item Ignore their yellow borders.
 \end{itemize}
 
-\textbf{4 × Far Map Tile (II-III)}
+\textbf{4 × Far Map (II-III) Tile}
 
-\textbf{4 × Near Map Tile (IV-V)}
+\textbf{4 × Near Map (IV-V) Tile}
 \begin{itemize}
   \item All Near Map tiles must have Obelisks.
 \end{itemize}
