--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -31,9 +31,9 @@ This scenario is played over ... rounds.
   \item \svg{azure}
 \end{itemize}
 
-\textbf{Town Buildings:} ...
+\textbf{Town Buildings:} \svg{bronze} Dwelling...
 
-\textbf{Map Tile Pool:} ...
+\textbf{Map Tile Pool:} Each player takes X [random] Near/Far Map (A-B) Tiles...
 
 \textbf{Bonus:} Choose one of the following options:
 
@@ -45,14 +45,14 @@ This scenario is played over ... rounds.
 
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
-\textbf{X × Starting Map tile (I)}
+  \textbf{X × Starting (I) Map Tile}
 \begin{itemize}
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far Map tile (II-III)}
+\textbf{Y × Far Map (II-III) Tile}
 
-\textbf{Z × Near Map tile (IV-V)}
+\textbf{Z × Near Map (IV-V) Tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 ...
@@ -60,17 +60,15 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 \subsection*{\MakeUppercase{Defeat Conditions}}
 ...
 
-\subsection*{\MakeUppercase{Timed events}}
+\subsection*{\MakeUppercase{Additional scenario rules}}
 
-\textbf{1$^{st}$ Round:}
 \begin{itemize}
     \item ...
 \end{itemize}
 
-\begin{multicols*}{2}
+\subsection*{\MakeUppercase{Timed events}}
 
-\subsection*{\MakeUppercase{Additional scenario rules}}
-
+\textbf{1$^{st}$ Round:}
 \begin{itemize}
     \item ...
 \end{itemize}
