--- a/sections/title_page.tex
+++ b/sections/title_page.tex
@@ -20,4 +20,7 @@
     \svg[0.1]{silver}
     \svg[0.1]{golden}
     \svg[0.1]{azure}
+    \svg[0.1]{gold}
+    \svg[0.1]{building_materials}
+    \svg[0.1]{valuables}
 }
