--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -163,7 +163,7 @@ The center of this tile is the Titans' Stronghold.
   \end{tabularx}
 }
 
-\vspace{3em}
+\newpage
 
 \begin{minipage}{0.4\paperwidth}
     \centering
@@ -172,26 +172,28 @@ The center of this tile is the Titans' Stronghold.
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
     \centering
-    \includegraphics[width=0.4\paperwidth]{\_assets/maps/titans-2.png}
+    \includegraphics[width=0.384\paperwidth]{\_assets/maps/titans-2.png}
     \captionof{figure}{2 players}
 \end{minipage}
+\linebreak
 \begin{minipage}{0.4\paperwidth}
     \centering
-    \includegraphics[width=0.4\paperwidth]{\_assets/maps/titans-3.png}
+    \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-3.png}
     \captionof{figure}{3 players}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
     \centering
-    \includegraphics[width=0.4\paperwidth]{\_assets/maps/titans-4.png}
+    \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-4.png}
     \captionof{figure}{4 players}
 \end{minipage}
+\linebreak
 \begin{minipage}{0.4\paperwidth}
     \centering
-    \includegraphics[width=0.4\paperwidth]{\_assets/maps/titans-5.png}
+    \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-5.png}
     \captionof{figure}{5 Players}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
     \centering
-    \includegraphics[width=0.4\paperwidth]{\_assets/maps/titans-6.png}
+    \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-6.png}
     \captionof{figure}{6 players}
 \end{minipage}
