Adjust Titan's Stronghold to current template

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -29,9 +29,9 @@ This scenario is played over 13 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
 
-\textbf{Map Tile Pool:} Each player takes 2 random Far (II-III) Map Tiles, one of which must contain a Settlement.
+\textbf{Map tile Pool:} Each player takes 2 random Far (II-III) Map tiles, one of which must contain a Settlement.
 
-\textbf{Starting Bonus:} None
+\textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map tiles and set them up as shown in the scenario map layout:
