--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -12,7 +12,7 @@
   When it happens, only you and your ally stand between the hordes and the total devastation of these lands.
 }
 
-\subsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario Length}}
 
 This scenario is played over 12 rounds.
 
@@ -34,23 +34,23 @@ This scenario is played over 12 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
-\textbf{Map Tile Pool:} Each player takes 1 random Near (IV-V) Map Tile and 1 random Far (II-III) Map Tile.
+\textbf{Map tile Pool:} Each player takes 1 random Near (IV-V) Map tile and 1 random Far (II-III) Map tile.
 
-\textbf{Starting Bonus:} Search (2) the Artifact Deck
+\textbf{Additional Bonus:} Search (2) the Artifact Deck
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and set them up as shown in the scenario map layout:
+Take the following Map tiles and set them up as shown in the scenario map layout:
 
-\textbf{2 × Starting (I) Map Tile}
+\textbf{2 × Starting (I) Map tile}
 \begin{itemize}
   \item Starting Tiles of your chosen factions.
   \item Ignore their yellow borders.
 \end{itemize}
 
-\textbf{4 × Far Map (II-III) Tile}
+\textbf{4 × Far (II-III) Map tile}
 
-\textbf{4 × Near Map (IV-V) Tile}
+\textbf{4 × Near (IV-V) Map tile}
 \begin{itemize}
   \item All Near Map tiles must have Obelisks.
 \end{itemize}
