--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -33,9 +33,9 @@ This scenario is played over ... rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling...
 
-\textbf{Map Tile Pool:} Each player takes X [random] Near/Far Map (A-B) Tiles...
+\textbf{Map tile Pool:} Each player takes X [random] Near/Far Map (A-B) Tiles...
 
-\textbf{Bonus:} Choose one of the following options:
+\textbf{Additional Bonus:} Choose one of the following options:
 
 \begin{itemize}
     \item ...
@@ -45,14 +45,14 @@ This scenario is played over ... rounds.
 
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
-  \textbf{X × Starting (I) Map Tile}
+  \textbf{X × Starting (I) Map tile}
 \begin{itemize}
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far Map (II-III) Tile}
+\textbf{Y × Far (II-III) Map tile}
 
-\textbf{Z × Near Map (IV-V) Tile}
+\textbf{Z × Near (IV-V) Map tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 ...
