Make ordering of subsections consistent

--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -41,7 +41,7 @@ This scenario is played over ... rounds.
     \item ...
 \end{itemize}
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
@@ -60,15 +60,15 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 \subsection*{\MakeUppercase{Defeat Conditions}}
 ...
 
-\subsection*{\MakeUppercase{Additional scenario rules}}
+\subsection*{\MakeUppercase{Timed Events}}
 
+\textbf{1$^{st}$ Round:}
 \begin{itemize}
     \item ...
 \end{itemize}
 
-\subsection*{\MakeUppercase{Timed events}}
+\subsection*{\MakeUppercase{Additional Scenario Rules}}
 
-\textbf{1$^{st}$ Round:}
 \begin{itemize}
     \item ...
 \end{itemize}
