Update coop template

--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -15,7 +15,7 @@ This scenario is played over ... rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
-\textbf{Player count:} ...
+\textbf{Player Count:} ...
 
 \textbf{Starting Resources:}\par
 \resources{<gold>}{<building_materials>}{<valuables>}
@@ -67,7 +67,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
     \item ...
 \end{itemize}
 
-\subsection*{\MakeUppercase{Additional Scenario Rules}}
+\subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
     \item ...
