--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -64,7 +64,7 @@ Kill all units in the Titans' Stronghold (the center of tile VI-VII next to tile
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
-There is an undefeated units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).
+There are undefeated units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).
 
 \subsection*{\MakeUppercase{Timed Events}}
 
