Consistent player setup (#19)

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -12,7 +12,7 @@
   When it happens, only you and your ally stand between the hordes and the total devastation of these lands.
 }
 
-\subsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario Length}}
 
 This scenario is played over 12 rounds.
 
@@ -21,10 +21,10 @@ This scenario is played over 12 rounds.
 \textbf{Player Count:} 2
 
 \textbf{Starting Resources:}\par
-{\centering\hfill \textbf{10 ×} \svg{gold} \hfill \textbf{2 ×} \svg{building_materials} \hfill \textbf{1 ×} \svg{valuables}\hfill}
+\resources{10}{2}{1}
 
 \textbf{Starting Income:}\par
-{\centering\hfill\textbf{``10''} \svg{gold} \hfill \textbf{``2''} \svg{building_materials} \hfill \textbf{``1''} \svg{valuables}\hfill}
+\resources{10}{2}{1}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -34,33 +34,25 @@ This scenario is played over 12 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
-\textbf{Map Tile Pool:} Each player takes 1 random Near Map Tile (IV-V) and 1 random Far Map Tile (II-III).
+\textbf{Map tile Pool:} Each player takes 1 random Near (IV-V) Map tile and 1 random Far (II-III) Map tile.
 
-\textbf{Bonus:} Search (2) the Artifact Deck
+\textbf{Additional Bonus:} Search (2) the Artifact Deck
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and set them up as shown in the scenario map layout:
+Take the following Map tiles and set them up as shown in the scenario map layout:
 
-\textbf{2 × Starting Map Tile (I)}
+\textbf{2 × Starting (I) Map tile}
 \begin{itemize}
   \item Starting Tiles of your chosen factions.
   \item Ignore their yellow borders.
 \end{itemize}
 
-\textbf{4 × Far Map Tile (II-III)}
+\textbf{4 × Far (II-III) Map tile}
 
-\textbf{4 × Near Map Tile (IV-V)}
+\textbf{4 × Near (IV-V) Map tile}
 \begin{itemize}
   \item All Near Map tiles must have Obelisks.
-\end{itemize}
-
-\subsection*{\MakeUppercase{Additional rules}}
-
-\begin{itemize}
-  \item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.
-  \item The hero who defeats an enemy army gains 2 \svg{experience}.
-    The winning player rolls two Treasure Dice and resolves one of them.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -85,6 +77,14 @@ One of your towns is captured or a main hero is defeated in battle (retreat does
   \item Spawn an enemy army according to the rules below.
 \end{itemize}
 
+\subsection*{\MakeUppercase{Additional Rules}}
+
+\begin{itemize}
+  \item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.
+  \item The hero who defeats an enemy army gains 2 \svg{experience}.
+    The winning player rolls two Treasure Dice and resolves one of them.
+\end{itemize}
+
 \subsection*{\MakeUppercase{Enemy Spawning\\and Movement}}
 
 \begin{itemize}
@@ -102,7 +102,7 @@ One of your towns is captured or a main hero is defeated in battle (retreat does
   \item Enemy armies have 3 Movement Points per round.
   \item Enemy armies move as described in the rulebook (p. 33), but instead of capturing, they destroy everything in their way.
     Place black cubes on any field they pass and treat them as empty from that point.
-  \item If an enemy's movement could go two different ways, the players decide which way to go.
+  \item If an enemy's movement could go different ways, the players decide which way to go.
 \end{itemize}
 
 
