--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -15,13 +15,13 @@ This scenario is played over ... rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
-\textbf{Player count:} ...
+\textbf{Player Count:} ...
 
 \textbf{Starting Resources:}\par
-{\centering\hfill \textbf{X ×} \svg{gold} \hfill \textbf{Y ×} \svg{building_materials} \hfill \textbf{Z ×} \svg{valuables}\hfill}
+\resources{<gold>}{<building_materials>}{<valuables>}
 
 \textbf{Starting Income:}\par
-{\centering\hfill\textbf{``X''} \svg{gold} \hfill \textbf{``Y''} \svg{building_materials} \hfill \textbf{``Z''} \svg{valuables}\hfill}
+\resources{<gold>}{<building_materials>}{<valuables>}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -31,28 +31,28 @@ This scenario is played over ... rounds.
   \item \svg{azure}
 \end{itemize}
 
-\textbf{Town Buildings:} ...
+\textbf{Town Buildings:} \svg{bronze} Dwelling...
 
-\textbf{Map Tile Pool:} ...
+\textbf{Map tile Pool:} Each player takes X [random] Near/Far Map (A-B) Tiles...
 
-\textbf{Bonus:} Choose one of the following options:
+\textbf{Additional Bonus:} Choose one of the following options:
 
 \begin{itemize}
     \item ...
 \end{itemize}
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
-\textbf{X × Starting Map tile (I)}
+  \textbf{X × Starting (I) Map tile}
 \begin{itemize}
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far Map tile (II-III)}
+\textbf{Y × Far (II-III) Map tile}
 
-\textbf{Z × Near Map tile (IV-V)}
+\textbf{Z × Near (IV-V) Map tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 ...
@@ -60,16 +60,14 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 \subsection*{\MakeUppercase{Defeat Conditions}}
 ...
 
-\subsection*{\MakeUppercase{Timed events}}
+\subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{1$^{st}$ Round:}
 \begin{itemize}
     \item ...
 \end{itemize}
 
-\begin{multicols*}{2}
-
-\subsection*{\MakeUppercase{Additional scenario rules}}
+\subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
     \item ...
