Add better formatting for Timed Events

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -29,7 +29,7 @@ This scenario is played over 13 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
 
-\textbf{Map tile Pool:} Each player takes 2 random Far (II-III) Map tiles, one of which must contain a Settlement.
+\textbf{Map tile Pool:} Each player takes 2 random Far (II-III) Map tiles, one of which must contain a Settlement
 
 \textbf{Additional Bonus:} None
 
@@ -63,7 +63,13 @@ If the Grail is not obtained at least once by the end of the 13th round, the gam
 If the Grail token has been obtained, the players gain additional time – until the end of the 16th round – to bring the Grail to their faction Town. Otherwise, all players lose the scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
-At the beginning of the 6th, 9th, and 12th rounds, remove all Black cubes from all Water Wheels and Windmills on the map. Additionally, all players possessing the title of ``\textcolor{darkcerulean}{Grail Knight}'' gain \svg{morale_positive}. Finally, any players who do not possess a title gain 2 \svg{morale_negative}.
+
+\textbf{6$^{th}$, 9$^{th}$ and 12$^{th}$ Rounds:}
+\begin{itemize}
+  \item Remove all Black cubes from all Water Wheels and Windmills on the map.
+  \item All players possessing the title of ``\textcolor{darkcerulean}{Grail Knight}'' gain \svg{morale_positive}.
+  \item Any players who do not possess a title gain 2 \svg{morale_negative}.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 Before this scenario:
