--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -67,14 +67,25 @@ One of your towns is captured or a main hero is defeated in battle (retreat does
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{6$^{th}$ and 9$^{th}$ Rounds:}
+\textbf{6$^{th}$ Round:}
 \begin{itemize}
-  \item Remove black cubes from windmills, water wheels, and mystical gardens.
+  \item Remove all Black cubes from all Windmills, Water Wheels, and Mystical Gardens on the map.
+  \item Spawn an enemy army according to the rules below.
 \end{itemize}
 
-\textbf{6$^{th}$-10$^{th}$ Rounds:}
+\textbf{7$^{th}$ and 8$^{th}$ Rounds:}
 \begin{itemize}
   \item Spawn an enemy army according to the rules below.
+\end{itemize}
+
+\textbf{9$^{th}$ Round:}
+\begin{itemize}
+  \item Repeat Timed Events of Round 6.
+\end{itemize}
+
+\textbf{10$^{th}$ Round:}
+\begin{itemize}
+  \item Repeat Timed Events of Rounds 7 and 8.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -90,16 +101,16 @@ One of your towns is captured or a main hero is defeated in battle (retreat does
 \begin{itemize}
   \item Enemy armies spawn on a random Obelisk field (use hero miniatures of factions not in play).
   \item Determine which Obelisk field by rolling 2 Attack Dice:
-  \begin{itemize}
+  \begin{itemize}[leftmargin=15pt]
     \item First die: --1 west, +1 east, 0 reroll
     \item Second die: --1 north, +1 south, 0 reroll
   \end{itemize}
   \item For more equal distribution, in Rounds 7 and 9, the enemy spawns on the opposite side than in the previous round.
     Rounds 8 and 10 are all random.
   \item If the tile to spawn an enemy on isn't discovered yet, flip it over and orient it as preferred.
-  \item If there is a hero on the field where the enemy spawns, a fight is initiated immediately.
+  \item If there is a hero on the field where the enemy spawns, a fight starts immediately.
   \item Enemy armies move at the end of every turn, starting with the same turn they spawned.
-  \item Enemy armies have 3 Movement Points per round.
+  \item Enemy armies have 3 MPs per round.
   \item Enemy armies move as described in the rulebook (p. 33), but instead of capturing, they destroy everything in their way.
     Place black cubes on any field they pass and treat them as empty from that point.
   \item If an enemy's movement could go different ways, the players decide which way to go.
