--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -62,10 +62,28 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{1$^{st}$ Round:}
+\textbf{X$^{th}$ Round:}
 \begin{itemize}
-    \item ...
+  \item ...
+  \item ...
 \end{itemize}
+
+% IF THERE ARE OVERLAPPING EVENTS, FOLLOW BELOW STRUCTURE, IN CHRONOLOGICAL ORDER
+%
+% \textbf{7$^{th}$ and 8$^{th}$ Rounds:}
+% \begin{itemize}
+%   \item ...
+% \end{itemize}
+%
+% \textbf{9$^{th}$ Round:}
+% \begin{itemize}
+%   \item Repeat Timed Events of Round 6.
+% \end{itemize}
+% 
+% \textbf{10$^{th}$ Round:}
+% \begin{itemize}
+%   \item Repeat Timed Events of Rounds 7 and 8.
+% \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
