--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -81,12 +81,28 @@ During this ``... faction ...'' campaign scenario, the following rules apply:
     \item ...
 \end{itemize}
 
-\subsection*{\MakeUppercase{Timed events}}
-
-\textbf{1$^{st}$ Round:}
+\textbf{X$^{th}$ Round:}
 \begin{itemize}
-    \item ...
+  \item ...
+  \item ...
 \end{itemize}
+
+% IF THERE ARE OVERLAPPING EVENTS, FOLLOW BELOW STRUCTURE, IN CHRONOLOGICAL ORDER
+%
+% \textbf{7$^{th}$ and 8$^{th}$ Rounds:}
+% \begin{itemize}
+%   \item ...
+% \end{itemize}
+%
+% \textbf{9$^{th}$ Round:}
+% \begin{itemize}
+%   \item Repeat Timed Events of Round 6.
+% \end{itemize}
+% 
+% \textbf{10$^{th}$ Round:}
+% \begin{itemize}
+%   \item Repeat Timed Events of Rounds 7 and 8.
+% \end{itemize}
 
 \end{multicols*}
 
