Fix missing header

--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -81,6 +81,8 @@ During this ``... faction ...'' campaign scenario, the following rules apply:
     \item ...
 \end{itemize}
 
+\subsection*{\MakeUppercase{Timed Events}}
+
 \textbf{X$^{th}$ Round:}
 \begin{itemize}
   \item ...
