Add credits section

--- a/metadata.tex
+++ b/metadata.tex
@@ -438,7 +438,7 @@
 \tableofcontents
 \vspace*{\fill}
 \columnbreak
-\vspace*{\fill}
+\vspace{-3em}
 \includegraphics[width=\linewidth]{\art/mummy.jpg}
 \end{multicols*}
 
@@ -449,5 +449,7 @@
 \include{clash/main.tex}
 
 \include{campaigns/main.tex}
+
+\include{sections/credits.tex}
 
 \end{document}
