--- a/coops/emerald_island_scavenger_hunt.tex
+++ b/coops/emerald_island_scavenger_hunt.tex
@@ -78,8 +78,8 @@ There are unflagged mines or settlements left in map at the end of Round 8.
     \end{itemize}
     \item If you have no unit in your unit deck (after a battle or if you not keep at least one unit) return all your unit to your faction's unit (even if other player are one or more of your unit).
     \item When on another player's castle, you may recruit or reinforce their units, for them or for yourself (You may only do so if they have built the corresponding dwelling/citadel) if the other player are agreed with that.
-    \item for the last mine/settlement battle add a gold neutral unit. (you have unlimited turns for this battle.) You can't use expert diplomacy to skip this battle!
-    \item the first time you reach the level IV, gain your second specialty.
+    \item For the last mine/settlement battle add a gold neutral unit. (you have unlimited turns for this battle.) You can't use expert diplomacy to skip this battle!
+    \item The first time you reach the level IV, gain your second specialty.
     \item When you reach level IV, move your token in level tracker to level III.
     \item Additionally, no player can:
     \begin{itemize}
