--- a/coops/emerald_island_scavenger_hunt.tex
+++ b/coops/emerald_island_scavenger_hunt.tex
@@ -70,7 +70,7 @@ There are unflagged mines or settlements left in map at the end of Round 8.
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
     \item cannot build gold dwelling.
-    \item You can give units, even outside your turn, to another player if one of your heroes are :
+    \item You can give units, even outside your turn, to another player if one of your heroes is:
     \begin{itemize}
         \item In the same tile. 
         \item In their castle.
