--- a/coops/emerald_island_scavenger_hunt.tex
+++ b/coops/emerald_island_scavenger_hunt.tex
@@ -88,28 +88,20 @@ There are unflagged mines or settlements left in map at the end of Round 8.
     \end{itemize}
 \end{itemize}
 
+\vspace{3em}
+
+\begin{center}
+  \includegraphics[width=0.2\paperwidth]{\_assets/maps/emerald-1.png}
+  \captionof{figure}{1-PLAYER SCENARIO}
+  \vspace{3em}
+  \includegraphics[width=0.3\paperwidth]{\_assets/maps/emerald-2.png}
+  \captionof{figure}{2-PLAYER SCENARIO}
+  \vspace{3em}
+  \includegraphics[width=0.3\paperwidth]{\_assets/maps/emerald-3.png}
+  \captionof{figure}{3-PLAYER SCENARIO}
+  \vspace{3em}
+  \includegraphics[width=0.3\paperwidth]{\_assets/maps/emerald-4.png}
+  \captionof{figure}{4-PLAYER SCENARIO}
+\end{center}
+
 \end{multicols*}
-
-\newpage
-
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/emerald-1.png}
-  \captionof{figure}{1 player}
-\end{minipage}
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/emerald-2.png}
-  \captionof{figure}{2 players}
-\end{minipage}
-\linebreak
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/emerald-3.png}
-  \captionof{figure}{3 players}
-\end{minipage}
-\begin{minipage}{0.4\paperwidth}
-  \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/emerald-4.png}
-  \captionof{figure}{4 players}
-\end{minipage}
