--- a/coops/emerald_island_scavenger_hunt.tex
+++ b/coops/emerald_island_scavenger_hunt.tex
@@ -64,7 +64,7 @@ There are unflagged mines or settlements left in map at the end of Round 8.
 
 \textbf{5$^{th}$ Round:}
 \begin{itemize}
-  \item gain again the result of one field with black cube.
+  \item Gain again the result of one field with black cube.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
