--- a/coops/emerald_island_scavenger_hunt.tex
+++ b/coops/emerald_island_scavenger_hunt.tex
@@ -72,9 +72,9 @@ There are unflagged mines or settlements left in map at the end of Round 8.
     \item You can't build gold dwelling.
     \item You can give units, even outside your turn, to another player if one of your heroes is:
     \begin{itemize}
-        \item In the same tile. 
-        \item In their castle.
-        \item Next to it.
+        \item In the same map tile of another heroes player. 
+        \item In their town of another player.
+        \item Next to another heroes player.
     \end{itemize}
     \item If you have no unit in your unit deck (after a battle or if you not keep at least one unit) return all your unit to your faction's unit (even if other player are one or more of your unit).
     \item When on another player's castle, you may recruit or reinforce their units, for them or for yourself (You may only do so if they have built the corresponding dwelling/citadel) if the other player are agreed with that.
