--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -80,12 +80,12 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \textbf{9$^{th}$ Round:}
 \begin{itemize}
-  \item Repeat the Timed Events of Round 6.
+  \item Repeat Timed Events of Round 6.
 \end{itemize}
 
 \textbf{10$^{th}$ Round:}
 \begin{itemize}
-  \item Repeat the Timed Events of Rounds 7 and 8.
+  \item Repeat Timed Events of Rounds 7 and 8.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -120,7 +120,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \begin{itemize}
   \item During a battle with an enemy army, a hero can retreat whenever a friendly unit is about to activate.
-    A retreating main hero loses all remaining Movement Points and is returned to an allied town or settlement of their choice, keeping all remaining units.
+    A retreating main Hero loses all remaining MPs and is returned to an allied town or settlement of their choice, keeping all remaining units.
   \item Retreating secondary heroes are removed from the game, but their remaining units are kept.
   \item Killed enemy units do not respawn.
 \end{itemize}
