Titans' Stronghold - text corrections

--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -46,7 +46,7 @@ This scenario plays out over ... rounds.
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map tiles and set them up as shown in the scenario map layout:
+Take the following Map tiles and arrange them as shown in the scenario map layout:
 
 \textbf{X × Starting Map tile (I)}
 \begin{itemize}
