--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -43,7 +43,7 @@ This scenario is played over ... rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and set them up as shown in the scenario map layout:
+Take the following Map tiles and arrange them as shown in the scenario map layout:
 
   \textbf{X × Starting (I) Map tile}
 \begin{itemize}
