--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -7,11 +7,11 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1219333721019256943}{Archon Studio Discord}
 
-\textit{A long time ago, a powerful fortress was built to house the fantastic and murderous Titans.
+\textit{A long time ago, a mighty fortress was built to house the fantastic and murderous Titans.
   No one has ever entered and returned to tell the tale.
-  Now, people speak about the death of guardians and an incredible amount of treasures, potentially including the best bow in the world.\\
+  Now, there are rumors about the death of the guardians and an incredible amount of treasures, potentially including the best bow in the world.\\
   If this legend of the empty fort is true, it's time for excavation.\\
-  But for now, you and your friends need to find the keys spread around Antagarich to open the gate of the Titans' stronghold.
+  But for now, you and your allies need to find the keys spread across Antagarich to open the gate of the Titans' stronghold.
 }
 \subsection*{\MakeUppercase{Scenario Length}}
 
@@ -41,7 +41,7 @@ This scenario is played over 16 rounds (15 on Impossible difficulty).
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and set them up as shown in the scenario map layout (P for the number of players):
+Take the following Map tiles and arrange them as shown in the scenario map layout (P stands for the number of players):
 
 \textbf{(1*P) Starting (I) Map tile}
 \begin{itemize}
@@ -70,27 +70,27 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
 
 \textbf{4$^{th}$, 8$^{th}$ and 12$^{th}$ Rounds:}
 \begin{itemize}
-  \item Remove black cubes from Windmills, Water Wheels, and Mystical Gardens.
+  \item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Remember: the center of tile VI-VII next to all I tiles is the Titans' Stronghold.
-  \item Nobody can enter the Titans' Stronghold before all other VII fields are flagged by any player.
+  \item Remember: the center of VI-VII tile next to all I tiles is the Titans' Stronghold.
+  \item No one can enter the Titans' Stronghold until all other VII fields are flagged by any player.
   \item After defeating a level VII neutral army, instead of resolving the field, the player chooses an option three times from the following list (an option may be chosen multiple times):
   \begin{itemize}
-    \item Another player (you choose) gains 5 gold.
-    \item Another player (you choose) gains 2 building materials.
-    \item Another player (you choose) gains 1 valuable.
+    \item Another player (your choice) gains 5 gold.
+    \item Another player (your choice) gains 2 building materials.
+    \item Another player (your choice) gains 1 valuable.
   \end{itemize}
-  Then flag the VII field with a faction cube.
-  (In solo play: no bonus!)
-  \item Ignore all yellow borders in tiles I.
+  Then, flag the VII field with a faction cube.
+  (There is no bonus in solo play!)
+  \item Ignore all yellow borders in I tiles.
   \item You can use your build token to give your resources to another player.
   \item Two players can use their build tokens to exchange artifacts and/or spells.
   \item Whenever a player visits an Obelisk, that player rolls one treasure die and one resource die, and resolves one of them.
-  \item When all VII fields (not including the Titans' Stronghold) are flagged, randomly draw and shuffle the following (see the next page) number of Neutral Unit cards from each of their corresponding decks to create a separate deck of Neutral Units for the Titans' Stronghold (the deck of Titans' Stronghold is sometimes cut in two because otherwise certain scenarios are impossible to implement with the cards from certain expansions).
-  \item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold deck instead of drawing them from the Neutral Unit card decks. The units are placed on the Combat board (see page 29, “Neutral Unit Setup” in the Core Rulebook). Players attempt to defeat the units they find at the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit decks instead of the Titans' Stronghold deck. Any Neutral Units surviving Combat at the Titans' Stronghold are shuffled back into the Titans' Stronghold deck. If there are not enough Unit cards in this deck, draw as many Unit cards as there are and place them on the Combat board.
+  \item When all VII fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding decks to create a separate deck of Neutral Units for the Titans' Stronghold (the deck of the Titans' Stronghold is sometimes split in two because certain scenarios are otherwise impossible to implement with the cards from certain expansions).
+  \item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold deck instead of from the Neutral Unit card decks. The units are placed on the Combat board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the units they find in the Titans' Stronghold. Any Neutral Units defeated during combat in the Titans' Stronghold are returned to their respective Neutral Unit decks instead of the Titans' Stronghold deck. Any Neutral Units surviving combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold deck. If there are not enough Unit cards in this deck, draw as many Unit cards as are available and place them on the Combat board.
   \item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat round, just like Combat against non-Azure tier units.
   \item Additionally, no player can:
   \begin{itemize}
@@ -176,33 +176,35 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
 
 \begin{minipage}{0.4\paperwidth}
   \centering
-  \includegraphics[width=0.2\paperwidth]{\_assets/maps/titans-1.png}
-  \captionof{figure}{1 player}
+  \includegraphics[width=0.18\paperwidth]{\_assets/maps/titans-1.png}
+  \captionof{figure}{1-PLAYER SCENARIO}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-2.png}
-  \captionof{figure}{2 players}
+  \includegraphics[width=0.36\paperwidth]{\_assets/maps/titans-2.png}
+  \captionof{figure}{2-PLAYER SCENARIO}
 \end{minipage}
+\vspace{1em}
 \linebreak
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-3.png}
-  \captionof{figure}{3 players}
+  \captionof{figure}{3-PLAYER SCENARIO}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-4.png}
-  \captionof{figure}{4 players}
+  \captionof{figure}{4-PLAYER SCENARIO}
 \end{minipage}
+\vspace{1em}
 \linebreak
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-5.png}
-  \captionof{figure}{5 Players}
+  \captionof{figure}{5-PLAYER SCENARIO}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-6.png}
-  \captionof{figure}{6 players}
+  \captionof{figure}{6-PLAYER SCENARIO}
 \end{minipage}
