--- a/sections/credits.tex
+++ b/sections/credits.tex
@@ -8,7 +8,7 @@
 
 \begin{multicols*}{2}
 
-This project shamelessly borrows best practices from the \href{https://github.com/Heegu-sama/Homm3BG}{\textbf{Rule Book Rewrite Project}}, which include LaTeX code, GitHub engineering, and translation framework.
+This project shamelessly borrows best practices from the \href{https://github.com/Heegu-sama/Homm3BG}{\textbf{Rule Book Rewrite Project}}, including LaTeX code, GitHub engineering, and translation framework.
 You should check it out if you haven't seen it yet.
 
 \textbf{Scenario templating and LaTeX writing}: Tomáš Zeman, Andrzej Wiącek, Saveliy Ivanov
@@ -17,9 +17,9 @@ You should check it out if you haven't seen it yet.
 
 \textbf{Special thanks}: Everyone from Archon Studio, for producing the game and answering our incessant queries about rules and other topics.
 Jon Van Caneghem and everyone involved with the development of the original video game.
-Everyone who has supported the project with suggestions, corrections, image resources and words of encouragement either on Discord or BoardGameGeek.
+Everyone who has supported the project with suggestions, corrections, image resources, and words of encouragement either on Discord or BoardGameGeek.
 
-\textbf{Artwork borrowed from official release was made by}: Tomasz Badalski, Yoann Boissonnet, Shen Fei, Viviane Tybusch Souza, Iana Vengerova, Bartosz Winkler
+\textbf{Artwork borrowed from the official release was made by}: Tomasz Badalski, Yoann Boissonnet, Shen Fei, Viviane Tybusch Souza, Iana Vengerova, Bartosz Winkler
 
 \columnbreak
 
