Bloody Grail - text corrections

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1239631918643941509}{Archon Studios Discord}
 
-\textit{A Lady clad in dark robes visits you in your dreams, offering you a golden chalice full of blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}
+\textit{A lady clad in dark robes visits you in your dreams, offering you a golden chalice filled with blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This scenario is played over 13 rounds.
@@ -34,7 +34,7 @@ This scenario is played over 13 rounds.
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
-Take the following Map tiles and set them up as shown in the scenario map layout:
+Take the following Map tiles and arrange them as shown in the scenario map layout:
 
 \textbf{For a 2-player scenario:}
 \begin{itemize}
@@ -60,15 +60,15 @@ To win the scenario, a Hero must obtain the Grail token and bring it to their fa
 \subsection*{\MakeUppercase{Defeat Conditions}}
 If the Grail is not obtained at least once by the end of the 13th round, the game ends, and all players lose the scenario.
 
-If the Grail token has been obtained, the players gain additional time – until the end of the 16th round – to bring the Grail to their faction Town. Otherwise, all players lose the scenario.
+If the Grail token has been obtained, the players gain additional time (until the end of the 16th round) to bring the Grail to their faction's Town. Otherwise, all players lose the scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{6$^{th}$, 9$^{th}$ and 12$^{th}$ Rounds:}
 \begin{itemize}
-  \item Remove all Black cubes from all Water Wheels and Windmills on the map.
+  \item Remove all Black cubes from every Water Wheel and Windmill on the map.
   \item All players possessing the title of ``\textcolor{darkcerulean}{Grail Knight}'' gain \svg{morale_positive}.
-  \item Any players who do not possess a title gain 2 \svg{morale_negative}.
+  \item All players who do not possess a title gain 2 \svg{morale_negative}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -104,7 +104,7 @@ During this scenario:
   \item If a Unit recruited at an Obelisk is defeated, Remove it.
   \item A player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability card. If a player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.
   \item A player who possesses the title of ``\textcolor{darkcerulean}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral Azure Units.
-  \item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it, and draw a new Astrologers Proclaim or Event card.
+  \item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event card.
   \item Players can use their Deck of Might \& Magic when paying gold to defend their faction Town.
   \item Ignore Combat encounters on the field with the Grail.
   \item Players may not Visit the field with the Grail token unless they have already Visited at least two Obelisks or the Grail token has been taken by any Hero at least once.
