--- a/coops/emerald_island_scavenger_hunt.tex
+++ b/coops/emerald_island_scavenger_hunt.tex
@@ -7,9 +7,9 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1222679455261261986}{Archon Studio Discord}
 
-\textit{Lord Markham has decided to organise a treasure hunt and you and your friends are going to take part.
+\textit{Lord Markham has decided to organize a treasure hunt and you and your friends are going to take part.
   But hurry up! Other teams are also on the trail, and one of them is almost finished!
-  And above all, beware: it seems that on this island lurks a creature identified as a dragon!}
+  And above all, beware: it seems that a creature identified as a dragon lurks on this island!}
 \subsection*{\MakeUppercase{Scenario Length}}
 
 This scenario is played over 8 rounds.
@@ -32,63 +32,59 @@ This scenario is played over 8 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling
 
-\textbf{Map tile Pool:} If you wish, you can have the II-III tiles distributed equally to each player rather than laying them out as proposed.
+\textbf{Map tile Pool:} If you wish, you can distribute the II-III tiles equally to each player rather than laying them out as proposed.
 
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and set them up as shown in the scenario map layout (P for the number of players):
+Take the following Map tiles and arrange them as shown in the scenario map layout (P stands for the number of players):
 
 \textbf{(1*P) Starting (I) Map tile}
 \begin{itemize}
   \item Starting Tiles of your chosen factions.
-  \item Ignore any yellow line between tiles I (but not between tiles I and tiles II-III)
+  \item Ignore any yellow lines between tiles I (but not between tiles I and tiles II-III)
 \end{itemize}
 
 \textbf{(4*P) × Far (II-III) Map tile}
 
-\textbf{0 × Near (IV-V) Map tile}
-
-\textbf{0 × Center (VI-VII) Map tile}
-
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-Flag all mines and settlements. (Don't forget the mine of building materials in tile I, and each tile II-III are one mine (or settlements) with III fight)
+Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II-III contains one Mine or Settlement with a level III fight.)
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
-There are unflagged mines or settlements left in map at the end of Round 8.
+There are unflagged Mines or Settlements left in map at the end of Round 8.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{5$^{th}$ Round:}
 \begin{itemize}
-  \item Gain again the result of one field with black cube.
+  \item Gain again the result of one field with a Black Cube.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-    \item You can't build gold dwelling.
-    \item You can give units, even outside your turn, to another player if one of your heroes is:
+    \item You can't build a \svg{golden} Dwelling.
+    \item You can give Units to another player, even outside your turn, if one of your Heroes is:
     \begin{itemize}
-        \item In the same map tile of another heroes player. 
-        \item In their town of another player.
-        \item Next to another heroes player.
+        \item On the same Map tile as another player's Hero.
+        \item In another player's Town.
+        \item Next to another player's Hero.
     \end{itemize}
-    \item If you have no unit in your unit deck (after a battle or if you not keep at least one unit) return all your unit to your faction's unit (even if other player are one or more of your unit).
-    \item When on another player's castle, you may recruit or reinforce their units, for them or for yourself (You may only do so if they have built the corresponding dwelling/citadel) if the other player are agreed with that.
-    \item For the last mine/settlement battle add a gold neutral unit. (you have unlimited turns for this battle.) You can't use expert diplomacy to skip this battle!
-    \item The first time you reach the level IV, gain your second specialty.
-    \item When you reach level IV, move your token in level tracker to level III.
+    \item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your faction's Unit pool (even if another player has one or more of your Units). This includes units you've previously given to another player.
+    \item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.
+    \item For the last Mine/Settlement battle, add a \svg{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!
+    \item The first time you reach level IV, gain your second specialty.
+    \item When you reach level IV, move your token on the level tracker to level III.
     \item Additionally, no player can:
     \begin{itemize}
         \item Attack other Heroes.
-        \item Capture a Mine or Settlement that is already controlled.
+        \item Capture a Mine or Settlement that is already Flagged.
     \end{itemize}
 \end{itemize}
 
-\vspace{3em}
+\vspace{2em}
 
 \begin{center}
   \includegraphics[width=0.2\paperwidth]{\_assets/maps/emerald-1.png}
