Inferno campaign - Devilish Plan

--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -17,13 +17,21 @@ This scenario plays out over ... rounds.
 
 \textbf{Faction Hero:} ...
 
-\textbf{Starting Resources:} \svg{gold} \svg{building_materials} \svg{valuables}
+\textbf{Starting Resources:}\par
+\resources{<gold>}{<building_materials>}{<valuables>}
 
-\textbf{Starting Income:} \svg{gold} \svg{building_materials} \svg{valuables}
+\textbf{Starting Income:}\par
+\resources{<gold>}{<building_materials>}{<valuables>}
 
-\textbf{Starting Units:} \svg{bronze} \svg{silver} \svg{golden} \svg{azure}
+\textbf{Starting Units:}
+\begin{itemize}
+  \item A Few \svg{bronze}...
+  \item A Pack \svg{silver}...
+  \item \svg{golden}
+  \item \svg{azure}
+\end{itemize}
 
-\textbf{Town Buildings:} ...
+\textbf{Town Buildings:} \svg{bronze} Dwelling...
 
 \textbf{Bonus:} Choose one of the following options: 
 \begin{itemize}
@@ -61,25 +69,11 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 
 ... describe how your and enemy heroes will be placed ...
 
-\subsection*{\MakeUppercase{Additional rules}}
+\subsection*{\MakeUppercase{Victory Conditions}}
+...
 
-During this ``... faction ...'' campaign scenario, the following rules apply:
-
-\begin{itemize}
-    \item ...
-\end{itemize}
-
-\subsection*{\MakeUppercase{Win/lose conditions}}
-
-\textbf{Win:}
-\begin{itemize}
-    \item ...
-\end{itemize}
-
-\textbf{Lose:}
-\begin{itemize}
-    \item ...
-\end{itemize}
+\subsection*{\MakeUppercase{Defeat Conditions}}
+...
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -105,6 +99,14 @@ During this ``... faction ...'' campaign scenario, the following rules apply:
 % \begin{itemize}
 %   \item Repeat Timed Events of Rounds 7 and 8.
 % \end{itemize}
+
+\subsection*{\MakeUppercase{Additional rules}}
+
+During this ``... faction ...'' campaign scenario, the following rules apply:
+
+\begin{itemize}
+  \item ...
+\end{itemize}
 
 \end{multicols*}
 
