--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -85,8 +85,9 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \textbf{10$^{th}$ Round:}
 \begin{itemize}
-  \item Repeat Timed Events of Rounds 7 and 8.
+  \item Repeat the Timed Events of Rounds \mbox{7 and 8.}
 \end{itemize}
+\vspace{-0.5em}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
