--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -80,7 +80,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \textbf{9$^{th}$ Round:}
 \begin{itemize}
-  \item Repeat Timed Events of Round 6.
+  \item Repeat the Timed Events of Round 6.
 \end{itemize}
 
 \textbf{10$^{th}$ Round:}
