Breaking before additional rules

--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -73,6 +73,8 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
   \item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
 \end{itemize}
 
+\vspace*{\fill}\columnbreak
+
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item Remember: the center of VI-VII tile next to all I tiles is the Titans' Stronghold.
